--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -28,6 +28,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">Loading Application</div>
+    <div id="root">Loading Application...</div>
   </body>
 </html>
