--- a/front-end/public/silent-check-sso.html
+++ b/front-end/public/silent-check-sso.html
@@ -1,1 +1,1 @@
-<html><body><script>parent.postMessage(location.href, location.origin)</script></body></html>
+<!DOCTYPE html><html><body><script>parent.postMessage(location.href, location.origin)</script></body></html>
